# pyspnego

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  azure-pipelines.yml  jordan.py  parse_negotiate_token.py  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
build_helpers/: lib.sh  run-ci.sh  run-container.sh
ci/: setup.sh
docs/: debugging.md  gssapi_issues.md
docs/examples/: client_auth.py  iov_wrapping.py  local_auth.py
docs/exceptions/: authentication.md  credentials.md  negotiate.md  wrapping.md
docs/scenarios/: gssapi_kerberos.md  gssapi_negotiate_kerberos_with_ntlm.md  gssapi_negotiate_kerberos_without_ntlm.md  gssapi_negotiate_ntlm_fallback.md  gssapi_negotiate_ntlm_with_ntlm.md  gssapi_ntlm.md  heimdal_macos_ntlm.md  heimdal_ntlm.md  kerberos_data.md  sspi_kerberos_in_smb_spnego.md  sspi_ntlm.md  sspi_ntlm_in_smb_spnego.md  sspi_ntlm_invalid_spn.md  template.md
scenarios/: gssapi_kerberos.md  gssapi_negotiate_kerberos_with_ntlm.md  gssapi_negotiate_kerberos_without_ntlm.md  gssapi_negotiate_ntlm_fallback.md  gssapi_negotiate_ntlm_with_ntlm.md  gssapi_ntlm.md  heimdal_macos_ntlm.md  heimdal_ntlm.md  kerberos_data.md  sspi_kerberos_in_smb_spnego.md  sspi_ntlm.md  sspi_ntlm_in_smb_spnego.md  sspi_ntlm_invalid_spn.md
scenarios/exceptions/: authentication.md  no_cached_credential.md  wrapping.md
spgnego/: __init__.py  _asn1.py  _context.py  channel_bindings.py  gssapi.py  ntlm.py  sspi.py
spnego/: __init__.py  __main__.py  _asn1.py  _compat.py  _context.py  _credssp.py  _credssp_structures.py  _gss.py  _kerberos.py  _negotiate.py  _ntlm.py  _spnego.py  _sspi.py  _text.py  _version.py  auth.py  channel_bindings.py  credssp.py  exceptions.py  gss.py  gssapi.py  iov.py  negotiate.py  ntlm.py  sspi.py
spnego/_ntlm_raw/: crypto.py  des.py  keys.py  messages.py  security.py
spnego/_sspi_raw/: __init__.py  security.pxd  sspi.pxd  sspi.pyx  text.pxd  text.pyx  windows.pxd
spnego/sspi/: console.c  console.pyx  fileapi.c  fileapi.pxd  fileapi.pyx  secur32.pyx  security.pxd  sspi.c  sspi.pxd  sspi.pyx  text.c  text.pxd  text.pyx  windows.pxd
src/spnego/: __init__.py  __main__.py  _asn1.py  _context.py  _credential.py  _credssp.py  _credssp_structures.py  _gss.py  _kerberos.py  _negotiate.py  _ntlm.py  _spnego.py  _sspi.py  _text.py  _tls_struct.py  _version.py  auth.py  channel_bindings.py  exceptions.py  iov.py  tls.py
src/spnego/_ntlm_raw/: crypto.py  des.py  messages.py  security.py
src/spnego/_sspi_raw/: __init__.py  security.pxd  sspi.pxd  sspi.pyi  sspi.pyx  text.pyi  text.pyx
tests/: conftest.py  pyspnego.ps1  tcp.cs  test_asn1.py  test_auth.py  test_auth_dce.py  test_channel_bindings.py  test_context.py  test_credssp.py  test_credssp_structures.py  test_deprecation.py  test_exception.py  test_exceptions.py  test_gss.py  test_kerberos.py  test_main.py  test_negotiate.py  test_ntlm.py  test_spnego.py  test_sspi.py  test_text.py  test_tls_struct.py
tests/_ntlm_raw/: __init__.py  test_crypto.py  test_des.py  test_md4.py  test_messages.py  test_security.py
tests/_sspi_raw/: test_sspi.py  test_text.py
tests/data/: credssp_ts_credential_password  credssp_ts_credential_remote_guard_empty_supplemental  credssp_ts_credential_remote_guard_multiple  credssp_ts_credential_remote_guard_no_supplemental  credssp_ts_credential_smart_card  credssp_ts_credential_smart_card_full  credssp_ts_remote_guard_ms_example  credssp_ts_request  initial_context_token_krb_ap_rep  initial_context_token_krb_ap_req  initial_context_token_neg_token_init  initial_context_token_neg_token_init2  krb_as_rep  krb_as_req  krb_error  krb_tgs_rep  krb_tgs_req  neg_token_resp  ntlm_authenticate  ntlm_authenticate_no_sign_seal  ntlm_challenge  ntlm_negotiate  test_context.py  tls1.0_client_hello  tls1.0_server_hello  tls1.1_client_hello  tls1.1_server_hello  tls1.2_client_hello  tls1.2_client_key_exchange  tls1.2_server_hello  tls1.3_client_hello  tls1.3_server_hello
tests/integration/: README.md  Vagrantfile  ansible.cfg  inventory.yml  main.yml  requirements.yml  tests.yml
tests/integration/templates/: generate_cert.sh.tmpl  krb5.conf.tmpl  test_integration.py.tmpl
