[pycodestyle]
max-line-length = 119

[tool:pytest]
junit_family=xunit2

[metadata]
license_file = LICENSE

[isort]
profile=black

[mypy]
exclude = (?x)(
    setup.py
    | build/    # temp build folder
  )
mypy_path = $MYPY_CONFIG_FILE_DIR/src
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true

# The ignores in this file are platform dependent so the ignores will not be
# needed on some flagging this rule. Just avoid specifically for this file
[mypy-spnego.exceptions]
warn_unused_ignores = false

[mypy-tests.*]
disallow_untyped_defs = false

# Cannot install on Windows so we cannot validate this
[mypy-spnego._gss]
disallow_any_unimported = false

[mypy-gssapi.*]
ignore_missing_imports = true

# These types are used in tests, too much effort to create stubs
[mypy-argcomplete]
ignore_missing_imports = true

[mypy-k5test]
ignore_missing_imports = true

[mypy-k5test.realm]
ignore_missing_imports = true

[mypy-ruamel]
ignore_missing_imports = true

[mypy-win32net]
ignore_missing_imports = true

[mypy-win32netcon]
ignore_missing_imports = true
